fix spacing and switch to em

--- a/assets/js/base/components/checkbox-control/style.scss
+++ b/assets/js/base/components/checkbox-control/style.scss
@@ -9,8 +9,8 @@
 		appearance: none;
 		border: 2px solid currentColor;
 		border-radius: 2px;
-		height: rem(18px);
-		width: rem(18px);
+		height: em(18px);
+		width: em(18px);
 		margin: 0;
 		min-height: 18px;
 		min-width: 18px;
@@ -32,8 +32,8 @@
 	.wc-block-components-checkbox__mark {
 		fill: #fff;
 		position: absolute;
-		left: rem(1px);
-		top: rem(5px);
+		left: em(1px);
+		top: em(-2px);
 		width: 16px;
 		height: 16px;
 	}
